add some logging, js deps

--- a/views/index.jade
+++ b/views/index.jade
@@ -11,7 +11,7 @@ block content
             placeholder='•••• •••• •••• ••••'
             autocompletetype='cc-number'
             required='required'
-            name='cc-num')
+            name='cardNumber')
         fieldset.form-group.col-sm-6
           label(for='cc-exp')
             span Expires
