--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,5 +8,6 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js', type='text/javascript')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.2/js/bootstrap.min.js', type='text/javascript')
-    script(src='js/main.js', type='text/javascript')
+    script(src='javascripts/main.js', type='text/javascript')
