--- a/views/index.jade
+++ b/views/index.jade
@@ -15,11 +15,11 @@ block content
         fieldset.form-group.col-sm-6
           label(for='cc-exp')
             span Expires
-          input.form-control(type='tel', placeholder='MM / YY', autocompletetype='cc-exp', required='required')
+          input.form-control(type='tel', name='expiration', placeholder='MM / YY', autocompletetype='cc-exp', required='required')
         fieldset.form-group.col-sm-4
-          label(for='cc-cvc')
+          label(for='cvc')
             span CVC
-          input.form-control(type='tel', placeholder='CVC', autocompletetype='cc-cvc', required='required')
+          input.form-control(name='cvc', type='tel', placeholder='CVC', autocompletetype='cc-cvc', required='required')
         .row
-          input.button.btn.btn-primary(name='commit', type='submit', value='Make Payment')
+          button.btn.btn-primary(type='submit') Make Payment
           a.btn.btn-secondaryk(href='/') Cancel
